# carbonne

./: Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  start_celery.sh
.github/workflows/: check-darker.yml
app/: celeryconfig.py  main.py
app/api/: deps.py
app/api/v1/endpoints/: tasks.py
app/core/: celery_app.py  config.py  logging_config.py
app/crud/: request.py
app/db/: init_db.py
app/models/: request.py
app/schemas/: request.py
app/tasks/: multiply.py  periodic_tasks.py
